2009-04-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* InfoManager.cs: Look up the Moonlight assemblies in the 
	correct plugin directory.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Comparison.cs: add properties used by the DB backend of the web
	application.

2009-04-02 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* CompareContext.cs:
	* MasterMetadata.cs: deal with errors loading the masterinfo file or
	any other by raising the Error event and calling Finish.

2009-04-02  Sebastien Pouliot  <sebastien@ximian.com>

	* InfoManager.cs: Look up the Moonlight assemblies in the plugin
	directory.

2009-02-26  Marek Habersack  <mhabersack@novell.com>

	* Comparison.cs: better handling of links generation for
	comparison types other than method, attribute and delegate.

2009-02-25  Marek Habersack  <mhabersack@novell.com>

	* MainWindow.cs, CecilMetadata.cs, Metadata.cs, CompareContext.cs,
	Comparison.cs: added support for MSDN documentation URLs attached
	to the tree nodes. URLs can be opened in the user's browser by
	double-clicking on the nodes which, when selected, show an MSDN
	URL in the status bar.
	Added a legend.

2009-01-29  Jb Evain  <jbevain@novell.com>

	* Makefile.am: reference directly cecil from the gac as gendarme
	does instead of copying it locally.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs, CecilMetadata.cs: use directly the new
	Resolve methods that Cecil now provides.

2009-01-06  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: support some more operators.

2008-12-25  Chris Toshok  <toshok@ximian.com>

	* CompareContext.cs: Make sure we compare attributes in
	CompareTypeLists too, otherwise we drop missing attribute nodes if
	the type is present.
	
2008-12-25  Chris Toshok  <toshok@ximian.com>

	* CompareContext.cs: split out the comparison of base types into a
	separate method.  Also, if we're adding a missing type, add a tree
	node for the base type.

2008-12-19  Jb Evain  <jbevain@novell.com>
